# ssis_adf_agent

./: .gitignore  .mcp.json  BACKLOG.md  BEHAVIORAL_PARITY.md  CHANGELOG.md  CI_RECIPES.md  COVERAGE.md  EFFORT_METHODOLOGY.md  ENCRYPTED_PACKAGES.md  HOWTO.md  LICENSE  OBSERVABILITY.md  PARITY.md  RBAC.md  README.md  ROADMAP.md  ROLLBACK.md  SECURITY.md  SETUP.md  SUPPORT.md  WORKFLOW.md  pyproject.toml  test_analyze.py  test_consolidate.py  test_convert_one.py  test_customer.py  test_deploy_dryrun.py  test_dft.py  test_validate_live.py
.github/: copilot-instructions.md
docs/: SUBSTITUTION_REGISTRY.md
infra/: deploy.ps1  main.bicep  seed_activity.sql
registries/: README.md  cozyroc_salesforce.json  kingswaysoft_dynamics.json  pragmatic_works.json
ssis_adf_agent/: __init__.py  __main__.py  cli.py  credential.py  mcp_server.py  path_safety.py  warnings_collector.py
tests/: test_activate_triggers.py  test_arm_template_export.py  test_automation_features.py  test_bicep_generator.py  test_bug_fixes.py  test_bulk_analyze.py  test_cli.py  test_cli_parity.py  test_consolidation.py  test_consolidation_analyzer.py  test_constraint_resolution.py  test_control_flow_expressions.py  test_convert_estate_cost_projection.py  test_cost_actuals.py  test_csharp_translator.py  test_data_flow_transforms.py  test_dataflow_parity_diff.py  test_dataflow_parity_orchestrator.py  test_dataflow_parity_worked_example.py  test_dataset_schema.py  test_deployer.py  test_diff_estate.py  test_documentation.py  test_effort_model.py  test_estate_pdf_report.py  test_estate_tools.py  (+35 more)
(+219 files in other folders)
